# memo

./: README.md  package.json  polar.config.js
contracts/: Cargo.toml
contracts/examples/: schema.rs
contracts/memo/: Cargo.toml  Makefile
contracts/memo/examples/: schema.rs
contracts/memo/schema/: handle_msg.json  init_msg.json  msgs_response.json  query_msg.json  state.json
contracts/memo/src/: contract.rs  msg.rs  state.rs
contracts/src/: contract.rs  msg.rs  state.rs
scripts/: deploy.js
