[package]
name = "sample-project"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []


[dependencies]
secret-cosmwasm-std = "0.10.0"
secret-cosmwasm-storage = { version = "0.10.0" }
secret-toolkit = { version = "0.2.0", features = ["permit"] }

schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
